Alignment issue fixed

--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -254,7 +254,7 @@ select option { padding: 2px 10px; }
 
 /* 2.1.2. File input box */
 .fileinput {
-  position: relative; display: inline-block; min-width: 100px;
+  position: relative; display: inline-block; min-width: 180px;
   input[type=file] { position: relative; z-index: 2; @include opacity(0); width: 100%; }
   .custom-fileinput { position: absolute; z-index: 0; top: 0; left: 0; width: 100%; line-height: normal; }
   &:after { display: block; content: "BROWSE"; position: absolute; top: 0; right: 0; bottom: 0; z-index: 1; background: $skin-select-color; color: #fff; font-size: 1em; padding-left: 15px; padding-right: 15px; letter-spacing: 0.04em; font-weight: bold; vertical-align: middle; }
